force-app/main/default/objects/Commercial__c/Commercial__c.object-meta.xml
<CustomObject>
    <label>Commercial</label>
    <nameField>
        <label>Commercial Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Commercials</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>