force-app/main/default/objects/Commercial__c/fields/Broadcasts_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Broadcasts_Scheduled__c</fullName>
    <description>The total number of times a Commercial is scheduled for broadcast. The candidate is responsible for updating this field.</description>
    <label>Broadcasts Scheduled</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>