force-app/main/default/objects/Commercial__c/fields/Broadcasts_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Broadcasts_Start_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>The earliest date in which the XYZ customer wants the Commercial to be broadcast. This field defaults to the current date on new Commercial records.</description>
    <label>Broadcasts Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>