force-app/main/default/objects/Commercial__c/fields/Broadcasts_Stop_Date__c.field-meta.xml
<CustomField>
    <fullName>Broadcasts_Stop_Date__c</fullName>
    <defaultValue>TODAY() + 14</defaultValue>
    <description>The latest date in which the XYZ customer wants the Commercial to be broadcast. This field defaults to 14 days from the current date on new Commercial records.</description>
    <label>Broadcasts Stop Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>