force-app/main/default/objects/Commercial__c/fields/Contracted_Broadcast_Time__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Broadcast_Time__c</fullName>
    <description>The number of seconds the customer has paid for their Commercial to be broadcast.</description>
    <label>Contracted Broadcast Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>