force-app/main/default/objects/Commercial__c/fields/Running_Time__c.field-meta.xml
<CustomField>
    <fullName>Running_Time__c</fullName>
    <defaultValue>30</defaultValue>
    <label>Running Time (Seconds)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>