force-app/main/default/objects/Commercial__c/fields/Total_Broadcast_Time__c.field-meta.xml
<CustomField>
    <fullName>Total_Broadcast_Time__c</fullName>
    <formula>Running_Time__c * Broadcasts_Scheduled__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Broadcast Time (Seconds)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>