force-app/main/default/objects/Commercial__c/validationRules/Broadcast_Stopdate_greaterthan_startdate.validationRule-meta.xml
<ValidationRule>
    <fullName>Broadcast_Stopdate_greaterthan_startdate</fullName>
    <active>true</active>
    <description>This date from being greater than 14 days from the Broadcast Start
Date</description>
    <errorConditionFormula>If(Broadcasts_Start_Date__c + 14 &gt; Broadcasts_Stop_Date__c,True,False)</errorConditionFormula>
    <errorDisplayField>Broadcasts_Stop_Date__c</errorDisplayField>
    <errorMessage>Stop Date must be after 14 days of start date</errorMessage>
</ValidationRule>